src/index.css
body {
  margin: 0;
  height: 100vh;
  /* display: flex; */
  /* justify-content: center;
  align-content: center; */
  background-color: #5bb0d4;
}




/*! NavBar Component  */



nav {
  /* margin-left: auto;
  margin-right: auto; */
  /* margin-bottom: 10px; */
  position: fixed;        /* 👈 makes it float */
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  align-items: center;
  background-color: white;
  /* background: transparent; */
  /* transition: all 0.3s ease; */

}

/* nav.scrolled {
  background: white;
  color: black;
  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
}

nav.scrolled ul li a {
  color: black;
}

nav.scrolled .hamburger {
  color: black;
}

nav.scrolled h1 {
  color: black;
} */

nav h1 {
  text-align: center;
  color: black;
}


nav ul {
  list-style-type: none;
  display: flex;
  justify-self: center;
  padding: 0;
  margin: 0;
}

nav ul li {
  padding: 1rem;
  font-size: 20px;
}

nav ul li a {
  text-decoration: none;
  /* color: black; */
  color: black;
}

.active {
  border-bottom: 1px black solid;
}

.hamburger {
  display: none;
}














.lavishly-yours-regular {
  font-family: "Lavishly Yours", cursive;
  font-weight: 400;
  font-style: normal;
}

#root {
  /* margin-top: auto; */
  margin-bottom: auto;
  /* padding: 1rem; */
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
}




/*! RSVP Page  */




#forms {
  margin-top: auto;
  margin-bottom: auto;
  /* background-color: white; */
  /* padding: 2rem; */
}

#forms img {
  width: 100px;
}


#forms form {
  display: flex;
  /* justify-content: center; */
  flex-wrap: wrap;
  flex-direction: column;
  padding: 2rem 5rem;
  background-color: lightblue;
  border-radius: 20px;
}

#forms h2 {
  text-align: center;
  font-size: 50px;
  margin: 0;
  color: white;
}

#forms form input {
  /* justify-self: center; */
  margin-bottom: 1rem;
  padding: 1rem 0;
  padding-left: 1rem;
  border-radius: 10px;
  border: none;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
}

#forms form input::placeholder {
  color: black;
  font-size: 15px;
}

#forms form label {
  margin-bottom: 10px;
  text-align: left;
}

#forms form label:last-of-type {
  text-align: center;
}

#submitForm {
  padding: 1rem 0;
  margin-left: auto;
  margin-right: auto;
  border-radius: 10px;
  border: none;
  background-color: white;
  color: black;
  font-weight: bold;
  width: 200px;
  font-size: 20px;
}




/*! Home page */







#home {
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: calc(100vh);
  background-image: url('../public/home_image.webp');
  background-repeat: no-repeat;
  background-size: cover;
}

#home h1 {
  color: white;
}

#home p {
  font-size: 35px;
  line-height: 5rem;
}


#homeImg {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-left: 2rem;
  padding-right: 2rem;
}


#home img {
  /* width: 100%;
  height: auto; */
  width: 800px;
  height: 800px;
  /* object-fit: cover; */
  /* padding-left: 1rem; */
  box-sizing: border-box;
  border-radius: 50%;
}


#home h1 {
  font-size: 60px;
}

#homeInfo {
  /* margin-top: 3rem; */
  font-size: 25px;
  background-color: black;
  width: 100%;
  display: grid;
  grid-template-columns: 55% 45%;
  align-items: center;
  padding-top: 5rem;
  padding-bottom: 5rem;
  color: white;
}

#homeInfoContent {
  text-align: start;
  padding-left: 6rem;
}

#homeInfoContent p {
  line-height: 3rem;
  margin-bottom: 7rem;
}

#homeInfoImg {
  display: flex;
  justify-content: center;
}

#homeInfo img {
  width: 100%;
  height: auto;
  /* object-fit: cover; */
  padding-left: 1rem;
  box-sizing: border-box;

}

#homeContent {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#homeWrapper {
  /* min-height: 100vh; */
  display: flex;
  flex-direction: column;
  /* align-items: center; */

  text-align: center;
}

#inviteSection {
  margin-bottom: 5rem;
}

#inviteSection p{
  font-size: 45px;
  line-height: 4rem;
}

#inviteSection img {
  object-fit: cover;
  width: 500px;
  height: 500px;
  border-radius: 50%;

}

#rsvpbutton {
  width: 50%;
  padding: 0.5rem 0;
  /* border-radius: 10px; */
  /* border: none; */
  /* background-color: blue; */
  margin-left: auto;
  margin-right: auto;
  font-size: 25px;
}
/* 
#rsvpbutton:hover {
  border-bottom: 1px black solid;
} */




/*! Our Story Page  */



#storyPage {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  margin-top: 80px;
  min-height: calc(100vh - 80px);
}

#storyPage > * {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#storyPage img {
  object-fit: cover;
  height: 600px;
  width: 600px;
  border-radius: 50%;
}






/*! Admin Page */




table {
  width: 100%;
  max-width: 800px;
  border-collapse: collapse;
  margin-top: 1.5rem;
  background-color: white;
  border-radius: 10px;
  overflow: hidden;
}

th, td {
  padding: 12px 16px;
  text-align: center;
}

th {
  background-color: #333;
  color: white;
  font-weight: 600;
}

tr:nth-child(even) {
  background-color: #f5f5f5;
}

tr:hover {
  background-color: #eaeaea;
}

td {
  border-bottom: 1px solid #ddd;
}

button {
  margin: 0 4px;
  padding: 6px 10px;
  border: none;
  /* border-radius: 6px; */
  cursor: pointer;
}

#round {
  border-radius: 6px;
  background-color: #4caf50;
  color: white;
}

/* button:first-child {
  background-color: #4caf50;
  color: white;
} */

#red {
  background-color: #e53935;
  color: white;
  border-radius: 6px;
}

#adminInfo {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: auto;
  margin-bottom: auto;
}

#adminInfo h1 {
  text-align: center;
}

.guest-card {
  display: none;
}

#adminButtons {
  margin-top: 2rem;
}


















/*! Registry Page */


#registry {
  margin-top: 80px;
  display: flex;
  align-items: center;
  flex-direction: column;
  min-height: calc(100vh - 80px);
  background-image: url('../public/home_image.webp');
  background-repeat: no-repeat;
  background-size: cover;
}

#amazonLogo {
  width: 100px;
  background-color: white;
  padding: 2rem;
  border-radius: 10px;
  transition: 0.5s ease;
}

#amazonLogo:hover {
  width: 125px;
}





/*! FAQs Page */


#faqSection {
  margin-top: 80px;
  display: grid;
  grid-template-columns: 60% 40%;
  min-height: calc(100vh - 80px);
}

#faqSection img {
  display: block;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

#faqSection #info {
  margin-top: auto;
  margin-bottom: auto;
}

#faqSection h1 {
  text-align: center;
  font-size: 50px;
  /* padding-top: 3rem; */
  margin-top: 0;
}

#questionSection {
  background-color: lightblue;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  border-radius: 20px;
}

#questionSection div {
  /* border: 1px black solid; */
  padding: 0.25rem 2rem;
}


.faq-question {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

.arrow {
  display: inline-block;      /* allows transform to work properly */
  transition: transform 0.3s ease;
  font-size: 16px;
}

.arrow.open {
  transform: rotate(180deg);
}


#questionSection h2 {
  text-align: center;
  font-size: 35px;
}

#questionSection p {
  font-size: 25px;
  text-align: center;
}










/*! Mobile View  */





@media screen and (min-width: 1000px) {
  #forms {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }

  #rsvpbutton {
    width: 25%;
  }
}

#mobileCards {
  width: 100%;
}



@media screen and (max-width: 768px) {
  table {
    display: none;
  }

  #home {
    display: flex;
    flex-direction: column;
    /* height: calc(100vh - 66.5px); */
    height: 100vh;
    justify-content: center;
    background-position: center ;
  }

  .guest-card {
    background: white;
    border-radius: 10px;
    padding: 1rem;
    margin-bottom: 1rem;
    /* width: 100%; */
    max-width: 500px;
    display: flex;
  }

  .guest-card p {
    margin: 0.25rem 0;
  }

  .guest-card .actions {
    margin-top: 0.5rem;
    display: flex;
    gap: 0.5rem;
    flex-direction: column;
    margin-left: auto;
    margin-top: auto;
    margin-bottom: auto;
  }

  #adminButtons {
    margin: 0;
  }

  #rsvpbutton {
    font-size: 20px;
    width: 50%;
  }

  #homeContent h2 {
    font-size: 35px;
  }

  #inviteSection p {
    font-size: 25px;
    line-height: 3rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  #inviteSection img {
    width: 200px;
    height: 200px;
  }

  #homeInfoContent {
    padding: 2rem;
  }

  #homeInfoContent h1 {
    font-size: 35px;
  }

  #homeInfoContent p {
    font-size: 20px;
  }


  nav {
    grid-template-columns: 25% 1fr 25%;
    /* margin-top: 1rem; */
  }

  nav h1 {
    font-size: 22px;
  }

  .hamburger {
    display: block;
    background: none;
    border: none;
    font-size: 1.5rem;
    cursor: pointer;
    width: 50%;
    background-color: transparent;
    /* color: white; */
  }

  nav ul {
    display: none; /* hidden initially */
    flex-direction: column;
    gap: 0;
    background-color: white;
    width: 100%;
    text-align: center;
    position: absolute;
    top: 54px;
    left: 0;
    padding: 1rem 0;
    box-sizing: border-box;
  }

  nav ul.open {
    display: flex;
  }

  nav ul li {
    margin: 0.5rem 0;
  }

  #homeImg {
    padding: 0;
  }

  #home img {
    padding: 0;
    width: 100%;
    height: auto;
    border-radius: 0;
  }

  #home h1 {
    font-size: 40px;
  }

  #home p {
    font-size: 25px;
  }

  #homeInfo {
    display: block;
  }

  #homeInfo img {
    padding: 0;
  }

  #home div {
    background: rgba(0, 0, 0, 0.3);
    
  }

  #questionSection {
    display: block;
    width: 85%;
  }

  #questionSection #questions1 {
    margin-left: 2rem;
    margin-right: 2rem;
  }

  #questionSection #questions2 {
    margin-left: 2rem;
    margin-right: 2rem;
  }

  #questionSection h2 {
    font-size: 25px;
  }

  #faqSection {
    margin-top: 55.47px;
    display: block;
  }

  #faqSection h1 {
    padding-top: 0;
    margin-top: 50px;
    margin-bottom: 70px;
  }

  #faqSection #info {
    margin-bottom: 2rem;
  }

  #storyPage {
    display: block;
    margin-top: 55.47px;
  }

  #storyPage > * {
    display: block;
    align-items: normal;
  }

  #storyPage img {
    width: 100%;
    border-radius: 0; 
    object-fit: cover;
    height: 50%;

    /* width: 200px;
    height: 200px; */
  }

  #storyInfo {
    text-align: center;
  }

  #registry {
    margin-top: 55.47px;
    background-size: cover;
    background-position: center;
    min-height: calc(100vh - 55.47px);
  }

  #forms form {
    padding: 2rem 1rem;
    width: 75%;
    margin-right: auto;
    margin-left: auto;
  }

  #submitForm {
    width: 50%;
    padding: 0.5rem
  }
}

@media screen and (max-width: 375px) {
  p {
    font-size: 20px;
  }
}

